--- a/projects.html
+++ b/projects.html
@@ -152,10 +152,10 @@
               <div class="item-text">
                 <div class="item-text-wrap">
                   <p class="item-text-category">WEB-450</p>
-                  <h2 class="item-text-title">......................</h2>
+                  <h2 class="item-text-title">The Mean Stack Bootcamp </h2>
   
                   <div class="mt-1">
-                    <a href="" target="_blank" class="btn btn-work">View</a>
+                    <a href="https://bcrs-vv8a.onrender.com/#/" target="_blank" class="btn btn-work">View</a>
                   </div>
                 </div>
               </div>
