--- a/projects.html
+++ b/projects.html
@@ -151,8 +151,8 @@
             <div class="item">
               <div class="item-text">
                 <div class="item-text-wrap">
-                  <p class="item-text-category">WEB-450</p>
-                  <h2 class="item-text-title">The Mean Stack Bootcamp </h2>
+                  <p class="item-text-category">Bob's Computer Repair Shop</p>
+                  <h2 class="item-text-title">The Mean Stack Project</h2>
   
                   <div class="mt-1">
                     <a href="https://bcrs-vv8a.onrender.com/#/" target="_blank" class="btn btn-work">View</a>
@@ -165,8 +165,8 @@
             <div class="item">
               <div class="item-text">
                 <div class="item-text-wrap">
-                  <p class="item-text-category">WEB-.....</p>
-                  <h2 class="item-text-title">............................</h2>
+                  <p class="item-text-category">Node Bucket</p>
+                  <h2 class="item-text-title"></h2>
                   <div class="mt-1">
                     <a href="" target="_blank" class="btn btn-work">View</a>
                   </div>
